# catalogers_toolkit

./: .gitignore  LICENSE  README.markdown  count-stats.py  example.py  example2.py  example_subjects.py  make-aclr-csv.py  notes.markdown  pyproject.toml  test.py
examples/: make-aclr-csv.py
src/: crecord.py  example.py
src/catalogers_toolkit/: __init__.py  crecord.py  record_type.py
