[project]
name = "catalogers_toolkit"
version = "0.0.2"
authors = [
  { name="Sam Schlinkert", email="sschlink@pratt.edu" },
]
description = "A toolkit for catalogers using pyMarc"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sts10/catalogers_toolkit"
Issues = "https://github.com/sts10/catalogers_toolkit/issues"
